modifiche ai prezzi e agli ingredienti

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="menu online della Pizzeria e Antipasteria L'angoletto di Bitritto">
     <title>L'angoletto Pizzeria | Online Menù</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"/>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
+
     <link rel="stylesheet" href="Assets/CSS/style.css">
     <link rel="stylesheet" href="Assets/CSS/hero-header.css">
     <link rel="stylesheet" href="Assets/CSS/nav.css">
@@ -17,6 +19,9 @@
     <link rel="stylesheet" href="Assets/CSS/footer.css">
 
     <link rel="shortcut icon" href="Assets/CSS/IMGS/logo.webp" type="image/x-icon">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <script src="Assets/JS/Script.js"></script>
     
 </head>
@@ -258,22 +263,23 @@
 
                     <div class="list-container">
                         <ul class="food-list">
-                            <li class="food-item"><span class="nome inter">Pizza Lela</span><br><span class="descrizione">Mozzarella, pomodoro, cardoncelli, speck a dadini e pam grattato</span><br><span class="prezzo">€ 8.00</span></li>
+                            <li class="food-item"><span class="nome inter">Pizza Lela</span><br><span class="descrizione">Mozzarella, pomodoro, cardoncelli, speck a dadini e pan grattato</span><br><span class="prezzo">€ 8.00</span></li>
                             <li class="food-item"><span class="nome inter">Bresaola</span><br><span class="descrizione">Mozzarella, pomodoro, bresaola, rucola e grana</span><br><span class="prezzo">€ 8.00</span></li>
                             <li class="food-item"><span class="nome inter">Stracciatella e crudo</span><br><span class="descrizione">Mozzarella, pomodoro, stracciatella e prosciutto crudo</span><br><span class="prezzo">€ 8.50</span></li>
-                            <li class="food-item"><span class="nome inter">Cacio e pepe</span><br><span class="descrizione">Salsiccia fresca di Norcia, salsa cacio e pepe e pomodorini</span><br><span class="prezzo">€ 8.50</span></li>
+                            <li class="food-item"><span class="nome inter">Cacio e pepe</span><br><span class="descrizione">(Base bianca) Salsiccia fresca di Norcia, salsa cacio e pepe e pomodorini</span><br><span class="prezzo">€ 8.50</span></li>
                             <li class="food-item"><span class="nome inter">Capocollo</span><br><span class="descrizione">Mozzarella, pomodoro, pomodorini al forno, philadephia, capocollo e grana</span><br><span class="prezzo">€ 9.00</span></li>
-                            <li class="food-item"><span class="nome inter">Pizza Graziella</span><br><span class="descrizione">Mozzarella, funghi chiodini, datterini gialli, pancetta e grana</span><br><span class="prezzo">€ 9.00</span></li>
+                            <li class="food-item"><span class="nome inter">Pizza Graziella</span><br><span class="descrizione">(Base bianca) Mozzarella, funghi chiodini, datterini gialli, pancetta e grana</span><br><span class="prezzo">€ 9.00</span></li>
                             <li class="food-item"><span class="nome inter">Bufala e Norcia</span><br><span class="descrizione">Mozzarella di bufala, pomodoro e salsiccia fresca di Norcia</span><br><span class="prezzo">€ 9.00</span></li>
                             <li class="food-item"><span class="nome inter">Burratina</span><br><span class="descrizione">Mozzarella, pomodoro, burrata, pistacchi e grana</span><br><span class="prezzo">€ 9.00</span></li>
                         </ul>
                         
                         <ul class="food-list">
-                            <li class="food-item"><span class="nome inter">Pizza Speciale</span><br><span class="descrizione">Mozzarella di bufala, zucchine gratinate, pomodorini e prosciutto crudo</span><br><span class="prezzo">€ 9.00</span></li>
-                            <li class="food-item"><span class="nome inter">Pizza Antonio</span><br><span class="descrizione">Mozzarella, pomodoro, bresaola, carne macinata, emmenthal, pomodorini al forno e grana</span><br><span class="prezzo">€ 9.00</span></li>
+                            <li class="food-item"><span class="nome inter">Pizza Speciale</span><br><span class="descrizione">(Impasto Napoletano e Base bianca) Mozzarella di bufala, zucchine gratinate, pomodorini e prosciutto crudo</span><br><span class="prezzo">€ 9.00</span></li>
+                            <li class="food-item"><span class="nome inter">Pizza Antonio</span><br><span class="descrizione">Mozzarella, pomodoro, emmenthal, pomodorini al forno e grana</span><br><span class="prezzo">€ 9.00</span></li>
                             <li class="food-item"><span class="nome inter">Pizza Gerti</span><br><span class="descrizione">(Base bianca) Crema al pistacchio, salsiccia fresca di Norcia, datterini gialli e stracciatella</span><br><span class="prezzo">€ 9.00</span></li>
-                            <li class="food-item"><span class="nome inter">Pizza Silvio</span><br><span class="descrizione">Mozzarella, mortadella, stracciatella, pistacchi e grana</span><br><span class="prezzo">€ 9.00</span></li>
-                            <li class="food-item"><span class="nome inter">Pizza al guanciale</span><br><span class="descrizione">Mozzarella, pomodoro, philadephia, guanciale e pecorino</span><br><span class="prezzo">€ 9.00</span></li>
+                            <li class="food-item"><span class="nome inter">Pizza Silvio</span><br><span class="descrizione">(Base bianca) Mozzarella, mortadella, stracciatella, pistacchi e grana</span><br><span class="prezzo">€ 9.00</span></li>
+                            <li class="food-item"><span class="nome inter">Pizza al guanciale</span><br><span class="descrizione">(Base bianca) Mozzarella, pomodoro, philadephia, guanciale, pecorino e cipolla caramellata</span><br><span class="prezzo">€ 9.00</span></li>
+                            <li class="food-item"><span class="nome inter">Pizza Iris</span><br><span class="descrizione">(Base bianca )Mozzarella di bufala, datterini, pecorino e basilico</span><br><span class="prezzo">€ 9.00</span></li>
                             <li class="food-item"><span class="nome inter">Fantasia del pizzaiolo</span><br><span class="descrizione">Cornicione ripieno</span><br><span class="prezzo">€ 9.00</span></li>
                     </div>
 
@@ -381,33 +387,43 @@
         <h2 class="menu-title inter">
             I Nostri Menù
         </h2>
-        <div class="menu-container">
-
-            <div class="menu25">
-                <img src="Assets/CSS/IMGS/2.webp" alt="graficomenu">
-                <p class="descrizione-menu inter">
-                    Menù consigliato dalla nostra clientela - 7 portate<br><span class="descrizione">Olive<br>Funghi gratinati<br>Involtini di melanzane<br>Involtini di speck e scamorza<br>Panzerottini<br>Mozzarella<br>Prosciutto crudo di Parma<br>Pizza a scelta<br>Bevande incluse</span><br><span class="prezzo">€ 25.00</span>
-                </p>
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-
-            <div class="menu-list">
-                <ul>
-                    <li>
-                        <img src="Assets/CSS/IMGS/4.webp" alt="graficomenu" class="grafico">
-                        <p class="descrizione-menu inter">
-                            Menù da 16 - 4 portate<br><span class="descrizione">Olive<br>Bruschette<br>Patatine<br>Sfoglia classica centrale<br>Pizza a scelta (Gourmet escluse)<br>Bevanda da 33cl</span><br><span class="prezzo">€ 16.00</span>
-                        </p>
-                    </li>
-
-                    <li>
-                        <img src="Assets/CSS/IMGS/1.webp" alt="graficomenu" class="grafico">
-                        <p class="descrizione-menu inter">
-                            Menù da 30 - 7 portate<br><span class="descrizione">Olive<br>Funghi gratinati<br>Involtini di melanzane<br>Involtini di speck e scamorza<br>Panzerottini<br>Mozzarella<br>Prosciutto crudo di Parma<br>Pizza a scelta<br>Bevande incluse<br>Amaro<br>Dolce della casa</span><br><span class="prezzo">€ 30.00</span>
-                        </p>
-                    </li>
-                </ul>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="Assets/CSS/IMGS/4.webp" class="d-block w-100" alt="menu16">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class="general-info inter">Menù da €16</h5>
+                  <p class="general-info inter">Olive, bruschette, patatine, sfoglia classica centrale, pizza a scelta (gourmet escluse) e bevanda da 33cl</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="Assets/CSS/IMGS/2.webp" class="d-block w-100" alt="menu25">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class="general-info inter">Menù da €25</h5>
+                  <p class="general-info inter">Olive, funghi gratinati, involtini di melanzane, involtini di speck e scamorza, panzerottini, mozzarella, prosciutto crudo di parma, pizza a scelta, bevande incluse</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="Assets/CSS/IMGS/1.webp" class="d-block w-100" alt="menu30">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class="general-info inter">Menù da €30</h5>
+                  <p class="general-info inter">Olive, funghi gratinati, involtini di melanzane, involtini di speck e scamorza, panzerottini, mozzarella, prosciutto crudo di parma, pizza a scelta, bevande incluse, amaro e dolce della casa</p>
+                </div>
+              </div>
             </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
     <section class="tripadvisor inter">
